# noe-gate

./: Makefile  README.md  noe_playground.py  pyproject.toml  run_demo.sh
benchmarks/: bridge_overhead.py
docs/: implementation_contracts.md  quickstart_btcpp_converter.md  quickstart_llm_governance.md  quickstart_replay_audit.md  ros2_execution_boundary.md
examples/: robot_guard_demo.py  run_integration_demo.py
examples/auditor_demo/: run_demo_full.sh  shipment_certificate_tampered.json  verify_hallucination.py  verify_shipment.py  verify_shipment_uncertain.py
examples/btcpp_converter/: __init__.py  patrol_robot.xml  run_convert.py  test_integration.py  test_mapper.py
examples/integration_demo/artifacts/: cert_error.json  cert_permit.json  cert_stale.json  cert_veto.json  forwarded_goal_goal-a033ec.json  forwarded_goal_goal-f33dd5.json
examples/ros2_zone_entry/: context_zone_blocked.json  context_zone_clear.json  run_example.c
noe/: __init__.py  context_manager.py  gloss.py  glossary.json  hysteresis_adapter.py  noe_parser.py  noe_runtime.py  noe_validator.py
ros2_adapter/: Dockerfile  README.md  build_and_verify.sh  docker_verify.sh  ubuntu_setup.sh
ros2_adapter/examples/mobile_robot_zone_entry/: publish_scenario.py
ros2_adapter/noe_ros2_adapter/: CMakeLists.txt  package.xml
ros2_adapter/noe_ros2_adapter/config/: zone_entry.yaml
ros2_adapter/noe_ros2_adapter/include/noe_ros2_adapter/: context_builder.hpp  noe_gate_node.hpp
ros2_adapter/noe_ros2_adapter/launch/: mobile_robot_zone_entry.launch.py
ros2_adapter/noe_ros2_adapter/src/: context_builder.cpp  main.cpp  noe_gate_node.cpp
rust/: Readme.md
rust/noe_core/: CONFORMANCE_GAPS.md  Cargo.toml
rust/noe_core/cpp/: noe.hpp  smoke_test.cpp
rust/noe_core/docs/: conformance_surface.md
rust/noe_core/include/: noe_core.h
rust/noe_core/src/: ast.rs  context.rs  eval.rs  ffi.rs  hash.rs  lib.rs  parser.rs  types.rs  validator.rs
rust/noe_core/tests/: conformance.rs  hash_parity.rs  parser_golden.rs
rust/noe_core/tests/c/: smoke_test.c
rust/noe_core/tests/vectors/: ground_truth.json
tests/: test_error_determinism.py  test_safe_context_boundary.py  test_safety_integration.py  test_safety_kernel_invariants.py
tests/adversarial/: test_adversarial_correctness.py
tests/btcpp_converter/: test_chain_gen.py  test_determinism.py  test_parser.py  test_report.py
tests/nip011/: run_conformance.py
tests/packaging/: test_package.py
tests/persistence/: test_audit.py  test_cert_store.py  test_replay.py
